--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -19,6 +19,9 @@ dependencies {
     implementation "io.ktor:ktor-auth:$ktor_version"
     implementation "io.ktor:ktor-auth-jwt:$ktor_version"
 
+    implementation "io.ktor:ktor-html-builder:$ktor_version"
+    implementation "io.ktor:ktor-freemarker:$ktor_version"
+
 
     implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
     implementation 'com.zaxxer:HikariCP:4.0.3'
