--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -2,11 +2,19 @@ plugins {
     id 'application'
     id 'kotlin'
     id 'kotlinx-serialization'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
+}
+
+group 'com.example.survey'
+version '1.0-SNAPSHOT'
+
+application {
+    mainClass = 'com.example.survey.SurveyKt'
 }
 
 dependencies {
